API/deployment/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbsmart-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - bbsmart.smarthelmet.pl
    secretName: bbsmart-tls
  rules:
  - host: bbsmart.smarthelmet.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bbsmart-api-service
            port:
              number: 80
